--- a/src/shared/styles/components/header.scss
+++ b/src/shared/styles/components/header.scss
@@ -8,6 +8,10 @@
         height: $header-height-mobile;
     }
 
+    a {
+        text-decoration: none;
+    }
+
     .header-row {
         display: flex;
         justify-content: space-between;
