--- a/src/App.scss
+++ b/src/App.scss
@@ -15,3 +15,4 @@
 // pages
 @import 'shared/styles/pages/home';
 @import 'shared/styles/pages/privacy-policy';
+@import 'shared/styles/pages/confirm-signup';
