--- a/src/shared/styles/pages/_privacy-policy.scss
+++ b/src/shared/styles/pages/_privacy-policy.scss
@@ -8,6 +8,19 @@
     margin-top: 30px;
     margin-bottom: 50px;
 
+    h2 {
+        font-size: 22px;
+        line-height: 1.2;
+        font-family: 'Conthrax Sb', sans-serif;
+        text-transform: uppercase;
+        margin-bottom: 30px;
+    }
+
+    h3 {
+        font-size: 20px;
+        margin-bottom: 7px;
+    }
+
     table td {
         padding: 15px;
         border-bottom: solid 1px #aaaaaa;
