--- a/src/shared/styles/layout/_main.scss
+++ b/src/shared/styles/layout/_main.scss
@@ -48,9 +48,13 @@ button, .btn {
 
     &.btn-link {
         background-color: $button-link-bg;
-        padding-left: 25px !important;
-        padding-right: 40px !important;
+        padding-left: 20px !important;
+        padding-right: 35px !important;
+        padding-top: 14px;
+        padding-bottom: 14px;
         text-transform: uppercase;
+        font-size: 13px;
+        border-radius: 7px;
 
         &::after {
             content: " ";
