--- a/src/shared/styles/pages/_confirm-signup.scss
+++ b/src/shared/styles/pages/_confirm-signup.scss
@@ -44,6 +44,11 @@
                 animation-iteration-count: infinite;
             }
         }
+
+        .website-show {
+            font-size: $large-text-size;
+            text-transform: uppercase;
+        }
     }
 
 
