updated links target

--- a/src/shared/styles/pages/_confirm-signup.scss
+++ b/src/shared/styles/pages/_confirm-signup.scss
@@ -48,6 +48,11 @@
         .website-show {
             font-size: $large-text-size;
             text-transform: uppercase;
+
+            .website-show-link {
+                color: white;
+                text-decoration: none;
+            }
         }
     }
 
